# ML-AndrewNg

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
C1-Supervised ML_Regression and Classification/Week 1/: C1_W1_Lab03_Model_Representation_Soln.ipynb  C1_W1_Lab04_Cost_function_Soln.ipynb  C1_W1_Lab05_Gradient_Descent_Soln.ipynb
C1-Supervised ML_Regression and Classification/Week 1/.ipynb_checkpoints/: C1_W1_Lab01_Python_Jupyter_Soln-checkpoint.ipynb
C1-Supervised ML_Regression and Classification/Week 2/: C1_W2_Lab01_Python_Numpy_Vectorization_Soln.ipynb  C1_W2_Linear_Regression.ipynb
C1-Supervised ML_Regression and Classification/Week 3/: C1_W3_Lab06_Gradient_Descent_Soln.ipynb  C1_W3_Lab08_Overfitting_Soln.ipynb
C2-Advanced Learning Algorithms/Week 1/: C2_W1_Lab02_CoffeeRoasting_TF.ipynb
C2-Advanced Learning Algorithms/Week 1/.ipynb_checkpoints/: C2_W1_Assignment-checkpoint.ipynb  (+2 more)
C2-Advanced Learning Algorithms/Week 2/: C2_W2_Multiclass_TF.ipynb  C2_W2_Relu.ipynb  C2_W2_SoftMax.ipynb
C2-Advanced Learning Algorithms/Week 3/: C2_W3_Assignment.ipynb
C2-Advanced Learning Algorithms/Week 4/: C2_W4_Decision_Tree_with_Markdown.ipynb
C3-Unsupervised, Recommenders and Reinforcement Learning/Week 1/: C3_W1_Anomaly_Detection.ipynb  public_tests.py
C3-Unsupervised, Recommenders and Reinforcement Learning/Week 2/: C3_W2_Collaborative_RecSys_Assignment.ipynb  C3_W2_RecSysNN_Assignment.ipynb  recsysNN_utils.py
C3-Unsupervised, Recommenders and Reinforcement Learning/Week 3/: C3_W3_A1_Assignment.ipynb  State-action value function example.ipynb
(+45 files in other folders)
