[project]
name = "machine-learning-specialization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "numpy>=1.26.4, <2",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "nptyping>=2.5.0",
    "ruff>=0.9.6",
]
